--- a/db/docker-compose.yaml
+++ b/db/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: '3'
 
 services:
-  mongo-express:
+  armario-mongo-express:
     container_name: armario_mongo_express
     image: mongo-express:0.54.0
     ports:
@@ -11,14 +11,15 @@ services:
       ME_CONFIG_BASICAUTH_PASSWORD: admin
       ME_CONFIG_MONGODB_ENABLE_ADMIN: 'true'
       ME_CONFIG_MONGODB_PORT: 27017
+      ME_CONFIG_MONGODB_SERVER: 'armario-mongo'
       ME_CONFIG_MONGODB_ADMINUSERNAME: root
       ME_CONFIG_MONGODB_ADMINPASSWORD: root
-    links:
-      - mongo
+    depends_on:
+      - armario-mongo
     networks:
       - mongo-compose-network
 
-  mongo:
+  armario-mongo:
     container_name: armario_mongo
     image: mongo:focal
     environment:
