--- a/bot/package.json
+++ b/bot/package.json
@@ -15,15 +15,20 @@
   "license": "ISC",
   "dependencies": {
     "@discordjs/builders": "^0.12.0",
+    "@discordjs/opus": "^0.7.0",
     "@discordjs/rest": "^0.3.0",
+    "@discordjs/voice": "^0.8.0",
     "@mikro-orm/core": "^5.0.5",
     "@mikro-orm/mongodb": "^5.0.5",
     "@types/express": "^4.17.13",
     "@types/mongoose": "5.11.97",
     "@types/node": "^17.0.21",
     "discord-api-types": "^0.27.3",
+    "discord-tts": "^1.2.1",
     "discord.js": "^13.6.0",
+    "node-opus": "^0.3.3",
     "nodemon": "^2.0.15",
+    "opusscript": "^0.0.8",
     "ts-node": "^10.6.0",
     "typescript": "^4.6.2"
   }
