--- a/bot/package.json
+++ b/bot/package.json
@@ -26,6 +26,7 @@
     "discord-api-types": "^0.27.3",
     "discord-tts": "^1.2.1",
     "discord.js": "^13.6.0",
+    "libsodium-wrappers": "^0.7.9",
     "node-opus": "^0.3.3",
     "nodemon": "^2.0.15",
     "opusscript": "^0.0.8",
