--- a/bot/package.json
+++ b/bot/package.json
@@ -24,6 +24,7 @@
     "@types/mongoose": "5.11.97",
     "@types/node": "^17.0.21",
     "discord-api-types": "^0.27.3",
+    "discord-blackjack": "^4.0.0",
     "discord-tts": "^1.2.1",
     "discord.js": "^13.6.0",
     "libsodium-wrappers": "^0.7.9",
